--- a/src/app/components/Header/style.module.scss
+++ b/src/app/components/Header/style.module.scss
@@ -59,7 +59,7 @@
     .nav{
         display: flex;
         align-items: center;
-
+         
         .el{
             display: flex;
             flex-direction: column;
@@ -86,7 +86,7 @@
         }
         a{
             cursor: pointer;
-            color: black;
+            color:whitesmoke;
             font-weight: 500;
         }
     } 
