--- a/src/app/components/Header/nav/Footer/style.module.scss
+++ b/src/app/components/Header/nav/Footer/style.module.scss
@@ -10,6 +10,7 @@
         text-decoration: none;
     &:hover {
         text-decoration: underline;
+        color: palevioletred;
     }  
     }
 }
