--- a/src/app/components/Header/nav/style.module.scss
+++ b/src/app/components/Header/nav/style.module.scss
@@ -21,6 +21,7 @@
             font-size: 56px;
             gap: 12px;
             margin-top: 80px;
+            margin-left: 50px;
 
             .header{
                 color: rgb(153, 153, 153);
@@ -28,6 +29,7 @@
                 text-transform: uppercase;
                 font-size: 2rem;
                 margin-bottom: 40px;
+                
             }
 
             a{
