--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,25 @@ body {
     text-wrap: balance;
   }
 }
+
+
+.no-visible-scrollbar {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  -webkit-overflow-scrolling: touch;
+}
+
+.no-visible-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for all browsers except IE and Edge */
+html, body {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+/* Hide scrollbar for Chrome, Safari, and Opera */
+html::-webkit-scrollbar, body::-webkit-scrollbar {
+  display: none;
+}
