--- a/src/app/components/Header/style.module.scss
+++ b/src/app/components/Header/style.module.scss
@@ -3,11 +3,11 @@
     display: flex;
     z-index: 1;
     top: 0;
-    color: white;
+    color: #515151;
     padding: 35px;
     justify-content: space-between;
     width: 100%;
-    font-weight: 300;
+    font-weight: 500;
     box-sizing: border-box;
     align-items: center;
     
@@ -33,7 +33,7 @@
                 }
                 &:nth-of-type(3){
                     position: absolute;
-                    left: 120px;
+                    left: 135px;
                     padding-left: 0.3em;
                 }
             }
@@ -47,10 +47,10 @@
                 .codeBy{
                     transform: translateX(-100%);
                 }
-                .Akhshad{
+                .dennis{
                     transform: translateX(-65px);
                 }
-                .Gorle{
+                .snellenberg{
                     transform: translateX(-65px);
                 }
             }
@@ -78,7 +78,7 @@
                 height: 5px;
                 top: 45px;
                 left: 50%;
-                background-color: white;
+                background-color: #515151;
                 border-radius: 50%;
                 transform: scale(0) translateX(-50%);
                 transition: transform 0.2s cubic-bezier(0.76, 0, 0.24, 1);
@@ -86,7 +86,7 @@
         }
         a{
             cursor: pointer;
-            color:whitesmoke;
+            color:#515151;
             font-weight: 500;
         }
     } 
