--- a/src/app/components/Landing/style.module.scss
+++ b/src/app/components/Landing/style.module.scss
@@ -42,7 +42,7 @@
       position: absolute;
       top: 35%;
       left: 65%;
-      color: white;
+      color: #515151;
       font-size: 24px;
       font-weight: 300;
       p{
