--- a/src/app/components/ui/swiper.module.css
+++ b/src/app/components/ui/swiper.module.css
@@ -1,20 +1,16 @@
 .swiperSlide {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 300px; /* Adjust height as needed */
 }
 
 .swiperSlide img {
-    border-radius: 3%;
-    border: none;
-    width: 100%; /* Make the image take up the full width of its container */
-    height: auto; /* Maintain the aspect ratio */
-    max-width: 1000px; /* Maximum width for larger screens */
-    
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover; /* Ensure images cover the area */
 }
+
 @media (min-width: 1024px) and (max-width: 1440px) {
     .swiperSlideImg {
         max-width: 1000px; /* Adjust the maximum width for laptop screens */
@@ -44,3 +40,25 @@
        
     }
 }
+
+.swiper-button-prev,
+.swiper-button-next {
+  color: #fff; /* Arrow color */
+  background-color: rgba(0, 0, 0, 0.5); /* Background color */
+  border-radius: 50%; /* Round shape */
+  width: 40px; /* Width of the arrow button */
+  height: 40px; /* Height of the arrow button */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 10; /* Ensure they are on top of the slides */
+}
+
+.swiper-button-prev {
+  left: 10px; /* Positioning */
+}
+
+.swiper-button-next {
+  right: 10px; /* Positioning */
+}
+
