--- a/src/app/components/Header/style.module.scss
+++ b/src/app/components/Header/style.module.scss
@@ -3,7 +3,7 @@
     display: flex;
     z-index: 1;
     top: 0;
-    color: #515151;
+    color: #275BE1;
     padding: 35px;
     justify-content: space-between;
     width: 100%;
@@ -86,7 +86,7 @@
         }
         a{
             cursor: pointer;
-            color:#515151;
+            color:#275BE1;
             font-weight: 500;
         }
     } 
