--- a/src/app/components/Landing/style.module.scss
+++ b/src/app/components/Landing/style.module.scss
@@ -21,12 +21,12 @@
     .slider p{
       position: relative;
       margin: 0px;
-      color: blanchedalmond;
+      color: #ffffff;
       text-shadow:
-      -1px -1px 0 #000, /* Top-left shadow */
-      1px -1px 0 #000, /* Top-right shadow */
-      -1px 1px 0 #000, /* Bottom-left shadow */
-      1px 1px 0 #000; /* Bottom-right shadow */
+      -1px -1px 0 #275BE1, /* Top-left shadow */
+      1px -1px 0 #275BE1, /* Top-right shadow */
+      -1px 1px 0 #275BE1, /* Bottom-left shadow */
+      1px 1px 0 #275BE1; /* Bottom-right shadow */
       font-size: 230px;
       font-weight: 500;
       padding-right: 50px;
@@ -42,7 +42,7 @@
       position: absolute;
       top: 35%;
       left: 65%;
-      color: #515151;
+      color: #ffffff;
       font-size: 24px;
       font-weight: 300;
       p{
