--- a/src/app/components/Preloader/style.module.scss
+++ b/src/app/components/Preloader/style.module.scss
@@ -18,7 +18,7 @@
     }
     p{
         display: flex;
-        color: white;
+        color:  rgb(255, 255, 255);
         font-size: 42px;
         align-items: center;
         position: absolute;
@@ -27,7 +27,7 @@
             display: block;
             width: 10px;
             height: 10px;
-            background-color: white;
+            background-color:  rgb(255, 255, 255) ;
             border-radius: 50%;
             margin-right: 10px;
         }
